fixed songs and app is real now

--- a/services/backend/Dockerfile
+++ b/services/backend/Dockerfile
@@ -8,6 +8,7 @@
     # Leverage build cache
     COPY Cargo.toml Cargo.lock ./
     COPY src ./src
+    COPY migrations ./migrations
     
     RUN cargo build --release
     
