--- a/services/ai-orchestrator/requirements.txt
+++ b/services/ai-orchestrator/requirements.txt
@@ -10,6 +10,7 @@ spotipy==2.24.0
 
 # Async HTTP client
 httpx==0.28.1
+requests==2.32.3
 
 # Redis for pub/sub
 redis==5.2.1
@@ -18,3 +19,6 @@ redis==5.2.1
 python-dotenv==1.0.1
 pydantic==2.10.4
 pydantic-settings==2.7.0
+
+# TikTok API for trending sounds
+TikTokApi==6.2.0
