--- a/services/backend/Cargo.toml
+++ b/services/backend/Cargo.toml
@@ -16,19 +16,17 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 once_cell = "1"
 tokio-stream = "0.1"
 async-stream = "0.3"
-sqlx = { version = "0.8", features = [
-    "runtime-tokio",
+sqlx = { version = "0.7", features = [
+    "runtime-tokio-rustls",
     "postgres",     
-    "macros",        
+    "migrate",
     "uuid",          
     "chrono",        
-    "migrate",
+    "json",
 ] }
 chrono = { version = "0.4", features = ["serde"] }
-oauth-axum = "0.1.4"
 redis = { version = "0.32.5", features = ["tokio-comp"] }
 reqwest = { version = "0.12.23", features = ["json"] }
-scraper = "0.24.0"
 
 # WebSocket support
 axum-extra = { version = "0.10", features = ["typed-header"] }
@@ -40,10 +38,7 @@ futures-util = "0.3"
 urlencoding = "2.1"
 
 # UUID for session IDs
-uuid = { version = "1.0", features = ["v4"] }
+uuid = { version = "1.0", features = ["v4", "serde"] }
 
 # Cryptographic randomness for OAuth state
 rand = "0.8"
-
-# URL parsing for SSRF protection
-url = "2.5"
